<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_onedrive"
        android:icon="@drawable/ic_cloud"
        android:title="@string/connect_onedrive"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_invite_parent"
        android:title="@string/invite_parent"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_join_family"
        android:title="@string/join_family"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donate"
        android:icon="@drawable/ic_favorite"
        android:title="@string/support_development"
        app:showAsAction="ifRoom" />

</menu>
